--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ spacy==3.5.0
 protobuf==3.20.0
 ffmpeg-python==0.2.0
 sentencepiece==0.1.97
-en_core_web_lg @ https://huggingface.co/spacy/en_core_web_lg/resolve/main/en_core_web_lg-any-py3-none-any.whl
+en_core_web_sm==3.5.0
