--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ protobuf==3.20.0
 ffmpeg-python==0.2.0
 sentencepiece==0.1.97
 Flask==2.2.3
-en_core_web_lg @ https://huggingface.co/spacy/en_core_web_lg/resolve/main/en_core_web_lg-any-py3-none-any.whl
+en_core_web_sm @ https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl
