--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -25,7 +25,7 @@ start_container:
     - docker -H "$DOCKER_HOST" stop "$CONTAINER_NAME" || true
     - docker -H "$DOCKER_HOST" rm "$CONTAINER_NAME" || true
     - 'echo starting container $CONTAINER_NAME with ports "$CONTAINER_PORT_MAPPING"'
-    - docker -H "$DOCKER_HOST" run --network hub_authenticator --name "$CONTAINER_NAME" -d --restart always -p "$CONTAINER_PORT_MAPPING" -v /mnt/registrazioni/corsi:/usr/share/nginx/html/static/video "$REGISTRY_PATH"/"$IMAGE_NAME":"$IMAGE_TAG"
+    - docker -H "$DOCKER_HOST" run --network hub_authenticator --name "$CONTAINER_NAME" -d --restart always -p "$CONTAINER_PORT_MAPPING" "$REGISTRY_PATH"/"$IMAGE_NAME":"$IMAGE_TAG"
   only:
     - master
 
