--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ ffmpeg-python==0.2.0
 sentencepiece==0.1.97
 Flask==2.2.3
 en_core_web_sm @ https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl
+openai==0.27.6
+python-dotenv==1.0.0
